# fucking-av

./: .gitignore  CMakeLists.txt  README.md  log.c  log.h  main.cpp  mjs.c  mjs.h  program.manifest  resource.rc  utils.h
payload/: test.template.js
utils/: payload_generate.py  xor.py
